# cmsis_nn

./: CMakeLists.txt  README.md  my_project.c
